# temporal-demo-banking-app

./: .dockerignore  README.md
backend/src/banking_demo/: temporal_ui.py
backend/src/banking_demo/api/: routes.py
deploy/k8s/: README.md  certificate.yaml  configmap.yaml  deploy.sh  deployment.yaml  ingressroute.yaml  namespace.yaml  service.yaml
docker/: worker-python-lambda.Dockerfile
frontend/src/: App.tsx
frontend/src/components/: BackstagePanel.tsx  WorkflowDiagram.tsx
frontend/src/types/: index.ts
workflows/python/: pyproject.toml
workflows/python/src/banking_workflows/: lambda_worker.py  worker.py
