[project]
name = "banking-demo-workflows"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio>=1.29",
    "banking-demo-backend",
    "aiohttp>=3.9",
    "cryptography>=44.0",
]

[project.scripts]
worker = "banking_workflows.worker:main"

[tool.uv.sources]
banking-demo-backend = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banking_workflows"]
